--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       <input type="text" class="cityInput" placeholder="Enter city" />
       <button type="submit">Get Weather</button>
     </form>
-    <div class="card">
-      <h1 class="cityDisplay">Miami</h1>
+    <div class="card" style="display: none">
+      <!--<h1 class="cityDisplay">Miami</h1>
       <p class="tempDisplay">90°F</p>
       <p class="humidityDisplay">humidity: 75%</p>
       <p class="descDisplay">clear skies</p>
-      <p class="WeatherEmoji">🌞</p>
-      <p class="errorDisplay">Please enter a city</p>
+      <p class="WeatherEmoji">☀️</p>
+      <p class="errorDisplay">Please enter a city</p>-->
     </div>
 
     <script src="script.js"></script>
