--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Weather App</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,7 +16,7 @@
       <p class="tempDisplay">90°F</p>
       <p class="humidityDisplay">humidity: 75%</p>
       <p class="descDisplay">clear skies</p>
-      <p class="WeatherEmoji">☀️</p>
+      <p class="">☀️</p>
       <p class="errorDisplay">Please enter a city</p>-->
     </div>
 
